# docket

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agent-triage.example.yaml  docker-compose.yml  docket.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_adapter.yml
.github/workflows/: ci.yml  demo.yml  eval-rubrics.yml  integration.yml  release.yml
agent_triage/: __init__.py  __main__.py  _acceptance.py  cli.py  config.py  cost.py  errors.py  queue_store.py  runtime.py  sampling.py  self_test.py
agent_triage/adapters/: __init__.py  _retry.py  base.py
agent_triage/adapters/trace/: __init__.py  langfuse.py  langsmith.py  phoenix.py
agent_triage/adapters/tracker/: github.py  jira.py  linear.py
agent_triage/agent/: __init__.py  deep_agent.py  evals.py  report.py  review.py  triage.py
agent_triage/agent/subagents/: __init__.py  annotator.py  classifier.py  clusterer.py  drafter.py  poster.py
agent_triage/detectors/: __init__.py  base.py  composite.py  llm_judge.py  metric_threshold.py  regex.py  tool_call.py
agent_triage/llm/: __init__.py  _anthropic.py  _openai.py  base.py  embeddings.py
agent_triage/mcp_servers/: __init__.py  _common.py  _tracker_common.py  adapter_github.py  adapter_jira.py  adapter_langfuse.py  adapter_langsmith.py  adapter_linear.py  adapter_phoenix.py
agent_triage/models/: __init__.py  classification.py  cluster.py  eval_case.py  issue.py  listing.py  otlp.py  report.py  trace.py
agent_triage/observability/: __init__.py  instrumentation.py
agent_triage/rubric/: __init__.py  _sources.py  loader.py  registry.py  spec.py  validator.py
agent_triage/rubric/builtin/: __init__.py
agent_triage/rubric/builtin/agents/v1/: rubric.yaml
agent_triage/rubric/builtin/multi-agent/v1/: rubric.yaml
agent_triage/rubric/builtin/rag/v1/: rubric.yaml
agent_triage/rubric/builtin/routing/v1/: rubric.yaml
agent_triage/rubric/schemas/: v1.json
docket/: __init__.py  __main__.py  _acceptance.py  cli.py  config.py  cost.py  demo.py  errors.py  queue_store.py  runtime.py  self_test.py
docket/adapters/: __init__.py  _retry.py  base.py
docket/adapters/trace/: __init__.py  langfuse.py  langsmith.py  phoenix.py
docket/adapters/tracker/: __init__.py  github.py  jira.py  linear.py
docket/agent/: __init__.py  deep_agent.py  evals.py  report.py  review.py  triage.py
docket/agent/subagents/: __init__.py  annotator.py  classifier.py  clusterer.py  drafter.py  poster.py
docket/detectors/: __init__.py  base.py  composite.py  llm_judge.py  metric_threshold.py  regex.py  tool_call.py
docket/llm/: __init__.py  _anthropic.py  _openai.py  base.py  embeddings.py
docket/mcp_servers/: __init__.py  _common.py  _tracker_common.py  adapter_github.py  adapter_jira.py  adapter_langfuse.py  adapter_langsmith.py  adapter_linear.py  adapter_phoenix.py
docket/models/: __init__.py  classification.py  cluster.py  eval_case.py  issue.py  listing.py  otlp.py  report.py
docket/observability/: __init__.py  instrumentation.py  redact.py
docket/rubric/: __init__.py  _sources.py  loader.py  registry.py  spec.py  validator.py
docket/rubric/builtin/: __init__.py
docket/rubric/schemas/: v1.json
docs/: adapters.md  benchmarks.md  cli.md  comparison.md  concepts.md  configuration.md  demo.md  design.md  e2e-testing.md  index.md  local-github.md  local-jira.md  local-langfuse.md  local-langsmith.md  local-linear.md  local-phoenix.md  mcp-servers.md  python-api.md  quickstart.md  rubric-spec.md  triage-as-ci.md  tuning-mast-judges.md
docs/calibration/: README.md  field-guide.md
docs/plans/: 2026-07-demoability-and-positioning.md
examples/github-actions/: triage.yml
rubrics/examples/: sample-support-agent.yaml
rubrics/registry/: README.md
rubrics/registry/coding-agent/: README.md
rubrics/registry/coding-agent/v1/: rubric.yaml
rubrics/registry/multi-agent-supervisor/: README.md
rubrics/registry/multi-agent-supervisor/v1/: rubric.yaml
rubrics/registry/rag-knowledge-assistant/: README.md
rubrics/registry/rag-knowledge-assistant/v1/: rubric.yaml
rubrics/registry/sql-analytics-agent/: README.md
rubrics/registry/sql-analytics-agent/v1/: rubric.yaml
rubrics/registry/support-agent/: README.md
rubrics/registry/support-agent/v1/: rubric.yaml
rubrics/registry/voice-ivr-agent/: README.md
rubrics/registry/voice-ivr-agent/v1/: rubric.yaml
scripts/: benchmark_classify.py  demo.sh  ingest_acceptance_traces.py  ingest_acceptance_traces_langsmith.py  render_demo_svg.py  tune_mast_judges.py
tests/: conftest.py
tests/integration/: test_github_e2e.py  test_jira_e2e.py  test_linear_e2e.py  test_llm_judge_real.py  test_phoenix_e2e.py  test_phoenix_e2e_agent.py
tests/integration/fixtures/traces/: embedding_trace.json  error_trace.json  multi_agent.json  retrieval_augmented.json  simple_llm_call.json  tool_calling_agent.json
tests/unit/: test_acceptance_fixture.py  test_adapter_base.py  test_adapter_parity.py  test_adapter_retry.py  test_agent_report.py  test_annotator.py  test_builtin_agents.py  test_builtin_rubrics.py  test_classification.py  test_classifier.py  test_cli.py  test_cli_init.py  test_cli_queue.py  test_cluster_model.py  test_clusterer.py  test_config.py  test_cost.py  test_deep_agent.py  test_demo.py  test_detector_registry.py  test_detectors_composite.py  test_detectors_llm_judge.py  test_detectors_metric_threshold.py  test_detectors_regex.py  test_detectors_tool_call.py  test_drafter.py  test_embeddings.py  test_errors.py  test_evals.py  test_example_rubrics.py  test_failure_injection.py  test_github_adapter.py  test_imports.py  test_instrumentation.py  test_issue_model.py  test_jira_adapter.py  test_langfuse_adapter.py  test_langsmith_adapter.py  test_linear_adapter.py  test_listing_models.py  (+27 more)
tests/unit/fixtures/rubrics/: invalid_bad_id.yaml  invalid_bad_severity.yaml  invalid_duplicate_ids.yaml  invalid_missing_apiversion.yaml  valid_full.yaml  valid_minimal.yaml
(+21 files in other folders)
