[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docket-runtime"
version = "1.1.0"
description = "Observability-platform-agnostic triage runtime for LLM agent traces"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "docket maintainers" }]
keywords = [
    "llm",
    "agents",
    "observability",
    "tracing",
    "openinference",
    "evaluation",
    "failure-modes",
    "triage",
    "mcp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5,<3",
    "pyyaml>=6,<7",
    "click>=8.1,<9",
    "jsonschema>=4.21,<5",
    "anthropic>=0.40,<1",
    "openai>=1.50,<2",
    "httpx>=0.27,<1",
    "mcp>=1.0,<2",
    "scikit-learn>=1.8,<2",
    "numpy>=1.26,<3",
    "deepagents>=0.6,<1",
    "openinference-instrumentation-anthropic>=0.1,<1",
    "openinference-instrumentation-openai>=0.1,<1",
    "arize-phoenix-otel>=0.5,<1",
]

[project.urls]
Homepage = "https://github.com/wczaja/docket"
Repository = "https://github.com/wczaja/docket"
Issues = "https://github.com/wczaja/docket/issues"
Documentation = "https://github.com/wczaja/docket/blob/main/docs/quickstart.md"
Changelog = "https://github.com/wczaja/docket/releases"

[project.optional-dependencies]
# Local ONNX embeddings for clustering (no API key): `--embedding local:...`
local-embeddings = ["fastembed>=0.3,<1"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
    "types-jsonschema",
]

[project.scripts]
docket = "docket.cli:main"
# Alias matching the PyPI package name, so the documented one-liners
# (`uvx docket-runtime demo`, `pipx run docket-runtime demo`) work:
# both tools run the executable named after the package by default.
docket-runtime = "docket.cli:main"
docket-adapter-phoenix = "docket.mcp_servers.adapter_phoenix:cli_main"
docket-adapter-langfuse = "docket.mcp_servers.adapter_langfuse:cli_main"
docket-adapter-langsmith = "docket.mcp_servers.adapter_langsmith:cli_main"
docket-adapter-jira = "docket.mcp_servers.adapter_jira:cli_main"
docket-adapter-linear = "docket.mcp_servers.adapter_linear:cli_main"
docket-adapter-github = "docket.mcp_servers.adapter_github:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["docket"]

[tool.hatch.build]
include = [
    "docket/**/*.py",
    "docket/**/*.json",
    "docket/**/*.yaml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle, pyflakes
    "I",                # isort
    "B",                # flake8-bugbear
    "UP",               # pyupgrade
    "N",                # pep8-naming
    "ASYNC",            # async correctness
    "S",                # bandit
    "C4",               # comprehensions
    "PIE",              # misc
    "PT",               # pytest style
    "RET",              # return statements
    "SIM",              # simplifications
    "TID",              # tidy imports
]
ignore = [
    "S101",             # asserts (we re-allow per-file for tests below anyway)
    "N815",             # mixedCase fields — Pydantic models use apiVersion to match YAML
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "deepagents.*", "openinference.*", "phoenix.*", "fastembed.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=docket.rubric",
    "--cov=docket.detectors",
    "--cov=docket.models",
    "--cov=docket.llm",
    "--cov=docket.self_test",
    "--cov=docket.adapters",
    "--cov=docket.mcp_servers",
    "--cov=docket.runtime",
    "--cov=docket.agent",
    "--cov=docket.cli",
    "--cov=docket.config",
    "--cov=docket.errors",
    "--cov=docket.observability",
    "--cov=docket.sampling",
    "--cov=docket.cost",
    "--cov=docket.queue_store",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.coverage.run]
branch = false
source = [
    "docket.rubric",
    "docket.detectors",
    "docket.models",
    "docket.llm",
    "docket.self_test",
    "docket.adapters",
    "docket.mcp_servers",
    "docket.runtime",
    "docket.agent",
    "docket.cli",
    "docket.config",
    "docket.errors",
    "docket.observability",
    "docket.sampling",
    "docket.cost",
    "docket.queue_store",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
